--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -1,7 +1,7 @@
 @font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 300;
-    font-display: swap;
-    src: url('./fonts/Rubik-Light.ttf') format('truetype');
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url("./fonts/Rubik-Light.ttf") format("truetype");
 }
